# Echobay_app

./: .gitignore  README.md
invoicing_app-am-console/invoicing_app-am-console/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json  vite.config.ts
invoicing_app-am-console/invoicing_app-am-console/public/: manifest.json  offline.html  sw.js
nec-crm-app/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  vercel.json  vite.config.ts
nec-crm-app/src/: App.tsx  config.ts  index.css  reports.ts  vite-env.d.ts
nec_crm/: pyproject.toml
nec_crm/nec_crm/: api.py  demo.py  hooks.py  install.py  modules.txt  tasks.py
nec_crm/nec_crm/nec_crm/doctype/interaction/: interaction.json  interaction.py
nec_crm/nec_crm/nec_crm/report/backdated_interactions/: backdated_interactions.json  backdated_interactions.py
nec_crm/nec_crm/nec_crm/report/customer_silence_report/: customer_silence_report.json  customer_silence_report.py
nec_crm/nec_crm/nec_crm/report/interaction_log/: interaction_log.json  interaction_log.py
nec_crm/nec_crm/nec_crm/report/interactions_by_hour/: interactions_by_hour.json  interactions_by_hour.py
nec_crm/nec_crm/nec_crm/report/lead_funnel_report/: lead_funnel_report.json  lead_funnel_report.py
nec_crm/nec_crm/nec_crm/report/open_and_overdue_tasks/: open_and_overdue_tasks.json  open_and_overdue_tasks.py
nec_crm/nec_crm/nec_crm/report/sales_person_activity_summary/: sales_person_activity_summary.json  sales_person_activity_summary.py
(+53 files in other folders)
