[project]
name = "nec_crm"
authors = [
    { name = "NAQD", email = "naqdtech@gmail.com" },
]
description = "NEC Sales CRM — field interaction and task tracking on ERPNext (Stage 1)"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<17.0.0"
erpnext = ">=15.0.0,<17.0.0"
